--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
             Simple test
         </title>
         <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
-        <script src="../dist/main.js"></script>
+        <script src="./dist/main.js"></script>
     </head>
     <body>
         page served
